[package]
name = "stitch_lang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stitch"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15.3", optional = true, features=["multi_threaded"] }
# clap = { version = "0.4" }
ron = { version = "0.8" }
serde = { version = "1.0", features=["derive"] }
uuid = { version = "1.12", features=["v5", "serde"] }
tokio = { version = "1.44", features=[
  "rt-multi-thread",
  # #[tokio::main]
  "macros",
  # mpsc
  "sync",
  # sleep
  "time",
  # exit
  "signal"
]}

log = { version = "0.4" }
tracing-subscriber = { version = "0.3" }

[features]
default = []
bevy = ["dep:bevy"]
# cmd = ["dep:clap"]
